# crescent-ext-docstrings

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
crescent/ext/docstrings/: __init__.py  classes.py  decorator.py  exceptions.py  pyproject.toml  style.py
docstrings/: __init__.py  classes.py  decorator.py
